tests/models/enum/unnamed/u8/pass/default.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(default = 1)]
        u8
    ),
}
fn main() {}
