tests/models/enum/unnamed/u8/fail/default.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(default = 1.0)]
        u8
    ),
}
fn main() {}
